--- a/bttuan2/src/main/resources/application.properties
+++ b/bttuan2/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.ddl-auto=update
 # Giao diện quản lý H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.username=admin
+spring.datasource.password=admin
